--------------------------------------------------------------------------------------------------------------------------------------------
TAG v01-01-00
--------------------------------------------------------------------------------------------------------------------------------------------
PandoraSDK: v01-00-01
PandoraMonitoring: v01-00-01
LArContent: v01-01-00
LCContent: v01-00-01
Improvements to CMake build mechanics.

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v01-00-00
--------------------------------------------------------------------------------------------------------------------------------------------
Milestone v01 release.
Updated daughter package versions.

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v00-17
--------------------------------------------------------------------------------------------------------------------------------------------
Updated daughter package versions.

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v00-16
--------------------------------------------------------------------------------------------------------------------------------------------
Updated daughter package versions.

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v00-15
--------------------------------------------------------------------------------------------------------------------------------------------
Updated daughter package versions.

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v00-14