@@ -1,4 +1,12 @@
 --------------------------------------------------------------------------------------------------------------------------------------------
+TAG v01-02-00
+--------------------------------------------------------------------------------------------------------------------------------------------
+PandoraSDK: v01-00-01
+PandoraMonitoring: v01-00-01
+LArContent: v01-01-00
+LCContent: v01-01-00
+
+--------------------------------------------------------------------------------------------------------------------------------------------
 TAG v01-01-00
 --------------------------------------------------------------------------------------------------------------------------------------------
 PandoraSDK: v01-00-01
